log/build_2023-02-10_03-12-47/turtle_control_FRA/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/root/ros2_ws/install/turtle_control_FRA/lib/python3.10/site-packages/turtle_control_FRA/turtle_control.py", line 77
    if abs(self.x_error) > 0,5 and abs(self.y_error) > 0,5:
                            ^
SyntaxError: invalid syntax

